--- a/css/global.css
+++ b/css/global.css
@@ -58,33 +58,61 @@ a {
 }
 
 body {
-  background-color: aqua;
-  margin-top: 5px;
+  background-color: white;
 }
 
 .container {
-  width: 100%;
+  width: 1029px;
   margin: 0 auto;
 }
-.container .logo .logo1 .imageTravel {
-  width: 90px;
-  height: 80px;
-  margin-top: 25px;
+.container .banner {
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+}
+.container .banner .banner1 {
+  border: 0.5px solid rgb(168, 160, 160);
+  border-radius: 9px;
+  padding: 3px;
+}
+.container .banner1:hover {
+  border: 1.5px solid rgb(107, 107, 120);
+}
+
+.meniu {
+  width: 80%;
+  margin: 0 auto;
+}
+.meniu .meniuListi {
+  font-size: 15px;
+  position: fixed;
+  left: 700px;
+  top: 15px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.meniu .meniuListi .meniuListiItem {
+  display: inline-block;
+  font-size: small;
   margin-left: 20px;
+  margin-top: 15px;
 }
-.container .meniu {
-  height: 20px;
-  font-size: 17px;
-  font-weight: bolder;
+.meniu .meniuListiItem:hover {
+  border: 1.5px solid rgb(107, 107, 120);
 }
-.container .meniu .meniuListi {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 450px;
-  margin-top: 5px;
+.meniu .image .imageItem {
+  font-size: 15px;
+  position: fixed;
+  left: 630px;
+  top: 215px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
-.container .meniu .meniuListi .meniuListiItem {
-  margin-left: 20px;
-  color: black;
+.meniu .image .imageItem .imageItem1 {
+  font-size: 15px;
+  position: fixed;
+  left: 630px;
+  top: 345px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }/*# sourceMappingURL=global.css.map */
